[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/images/bg.png" type="Texture" id=1]
[ext_resource path="res://globals/Game.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/next-level.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/images/pause-btn.png" type="Texture" id=4]
[ext_resource path="res://assets/font_vcr_osd_mono.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/sounds/tick.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/gui.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/gameover.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/bgm.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/win.wav" type="AudioStream" id=10]

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true

[node name="Canvas" type="ParallaxBackground" parent="."]

[node name="TextureRect" type="TextureRect" parent="Canvas"]
modulate = Color( 0.435294, 0.435294, 0.435294, 0.607843 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TextureButton" parent="Canvas"]
visible = false
margin_left = 971.89
margin_top = 14.3974
margin_right = 1003.89
margin_bottom = 46.3974
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="Canvas"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -38.0
margin_right = 20.0
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.02124
margin_top = -0.722839
margin_right = 1.02124
margin_bottom = -0.722839
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scenes" type="HBoxContainer" parent="Container"]
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="Sounds" type="Node" parent="."]

[node name="GUI" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )

[node name="Tick" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )

[node name="Music" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
volume_db = -20.0
autoplay = true

[node name="Gameover" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
volume_db = -20.0

[node name="Win" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )

[node name="Title" type="AudioStreamPlayer" parent="Sounds"]

[node name="NextLevel" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )
volume_db = -10.0
[connection signal="pressed" from="Canvas/PauseButton" to="." method="pause"]
[connection signal="timeout" from="Timer" to="." method="_timer_tick"]
